# LBPanel_LBKit

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md
binary/u-boot/mmc/: REAME
docs/: BuildFromSourceOnOpenWrt.md  Keys_U-Boot.md  LBPanel_LBKit.md  RGBPanel.md  SPINorFlashAndWriteImage.md
patches/: build_LBPanel_LBKit_on_OpenWrt.patch  g++-uc.patch  lite-beapi-config-OpenWrt.patch
src/: Makefile.alone  Makefile.am  autogen.sh  configure.ac
src/app/: Makefile.alone  Makefile.am
src/app/mpd-client/: .gitignore  IconData.cpp  IconDefs.h  MPDClient.cpp  MPDClient.h  Makefile.alone  README.md  TApplication.cpp  TApplication.h  TMainPageView.cpp  TMainPageView.h  main.cpp
src/app/panel/: .gitignore  Makefile  Makefile.alone  Makefile.am  TAboutView.cpp  TAboutView.h  TApplication.cpp  TApplication.h  TCommandsPageView.cpp  TCommandsPageView.h  TLogoView.cpp  TLogoView.h  TMainPageView.cpp  TMainPageView.h  TMenuPageView.cpp  TMenuPageView.h  main.cpp  test-app.sh  test-panel.sh
src/app/recorder/: README.md
src/app/sample/app/: Makefile.alone  helloworld.cpp
src/app/sample/module/: Makefile.alone  helloworld.cpp
src/app/timer/: README.md
src/cmd/: Makefile  Makefile.alone  Makefile.am  oled_clear.c  oled_power.c  oled_show.c  oled_update.c
src/cmd/lbk/: .gitignore  Makefile  Makefile.alone  Makefile.am  lbk-cmd.c  lbk-menu.cpp  lbk-message.cpp  lbk-notify.c  lbk-uci2msg.cpp
src/cmd/lcd-st7735s/: .gitignore  Makefile.alone  Makefile.am  lcd_clear.c  lcd_cmd.c  lcd_power.c  lcd_probe.c  lcd_show.c  lcd_update.c
src/cmd/npi-oled-hat/: .gitignore  Makefile  Makefile.alone  Makefile.am  npi_hat_cmd.c  oled_capture.c  oled_clear.c  oled_power.c  oled_show.c  oled_update.c
src/cmd/oled-ssd1306/: .gitignore  Makefile.alone  Makefile.am  oled_capture.c  oled_clear.c  oled_cmd.c  oled_power.c  oled_show.c  oled_update.c
src/cmd/scripts/: Makefile.am  overlay-switch.sh  usb-gadget.sh
src/include/: Makefile.am  OLEDAlertView.h  OLEDApp.h  OLEDAppKit.h  OLEDIconDefs.h  OLEDListItem.h  OLEDListView.h  OLEDMenuItem.h  OLEDMenuView.h  OLEDPageView.h  OLEDView.h  oled_ssd1306_ioctl.h
src/include/lbk/: LBAlertView.h  LBApp.h  LBAppDefs.h  LBAppSettings.h  LBApplication.h  LBIconDefs.h  LBKConfig.h  LBKit.h  LBListItem.h  LBListView.h  LBMenuItem.h  LBMenuView.h  LBPageView.h  LBScopeHandler.h  LBScopeItem.h  LBView.h  Makefile.am
src/include/lbk/add-ons/: LBPanelBuffer.h  LBPanelCombiner.h  LBPanelDevice.h  LBPanelDeviceAddOn.h  LBPanelKeypad.h  LBPanelKeypadGeneric.h  LBPanelScreen.h  LBPanelScreenNet.h  LBPanelTouchpad.h
src/libs/: Makefile.alone  Makefile.am
src/libs/include/: lcd_st7735s_ioctl.h  oled_ssd1306_ioctl.h
src/libs/lbk/: LBAlertView.cpp  LBApp.cpp  LBAppSettings.cpp  LBApplication.cpp  LBIconData.cpp  LBListItem.cpp  LBListView.cpp  LBMenuItem.cpp  LBMenuView.cpp  LBPageView.cpp  LBScopeHandler.cpp  LBScopeItem.cpp  LBView.cpp  Makefile  Makefile.alone  Makefile.am
src/libs/lbk/add-ons/: LBPanelBuffer.cpp  LBPanelCombiner.cpp  LBPanelDevice.cpp  LBPanelDeviceAddOn.cpp  LBPanelKeypad.cpp  LBPanelKeypadGeneric.cpp  LBPanelScreen.cpp  LBPanelTouchpad.cpp  Makefile.am
src/libs/lbk/add-ons/generic/: KeypadGeneric.cpp  KeypadGeneric.h  Makefile.alone  Makefile.am
src/libs/lbk/add-ons/lcd-st7735s/: LCDScreen.cpp  LCDScreen.h  Makefile.alone  Makefile.am
src/libs/lbk/add-ons/npi-oled-hat/: Config.h  Makefile  Makefile.alone  Makefile.am  NPIHat.cpp  NPIHat.h  NPIHatCombiner.cpp  NPIHatCombiner.h
src/libs/lbk/add-ons/oled-ssd1306/: Makefile.alone  Makefile.am  OLEDScreen.cpp  OLEDScreen.h
src/libs/lbk/add-ons/vpd/: Makefile  Makefile.alone  Makefile.am  VPD.cpp  VPD.h  VPDApp.cpp  VPDApp.h  VPDView.cpp  VPDView.h  font8.h
src/libs/lbk/sample/: Makefile  helloworld.cpp
src/libs/liboled_app/: Makefile  OLEDAlertView.cpp  OLEDApp.cpp  OLEDApp.h  OLEDConfig.h  OLEDIconData.cpp  OLEDMenuItem.cpp  OLEDMenuView.cpp  OLEDPageView.cpp  OLEDPageView.h  OLEDView.cpp  OLEDView.h
src/openwrt-pkgs/luci-app-lbpanel_conf/: Makefile  gen-pot.sh
src/openwrt-pkgs/luci-app-lbpanel_conf/luasrc/controller/: lbpanel_conf.lua
src/openwrt-pkgs/luci-app-lbpanel_conf/luasrc/model/cbi/: lbpanel_conf.lua
src/openwrt-pkgs/luci-app-lbpanel_conf/po/templates/: lbpanel_conf.pot
src/openwrt-pkgs/luci-app-lbpanel_conf/po/zh-cn/: lbpanel_conf.po
src/openwrt-pkgs/luci-app-lbpanel_conf/root/etc/config/: lbpanel_conf
src/openwrt-pkgs/luci-app-lbpanel_conf/root/etc/init.d/: lbpanel
src/openwrt-pkgs/luci-app-lbpanel_conf/root/etc/uci-defaults/: luci-app-lbpanel_conf
src/openwrt-pkgs/luci-app-lbpanel_conf/root/usr/share/scripts/: lbpanel-reload-uci-config.sh  lbpanel-uci-config.sh  start-lbpanel.sh
src/openwrt-pkgs/luci-app-usb_gadget/: Makefile  gen-pot.sh
src/openwrt-pkgs/luci-app-usb_gadget/luasrc/model/cbi/: usb_gadget.lua
src/openwrt-pkgs/luci-app-usb_gadget/po/templates/: usb_gadget.pot
src/openwrt-pkgs/luci-app-usb_gadget/po/zh_Hans/: usb_gadget.po
src/openwrt-pkgs/luci-app-usb_gadget/root/etc/config/: usb_gadget
src/openwrt-pkgs/luci-app-usb_gadget/root/etc/init.d/: usb_gadget
src/package/luci-app-usb_gadget/: Makefile
src/package/luci-app-usb_gadget/luasrc/controller/: usb_gadget.lua
src/package/luci-app-usb_gadget/luasrc/model/cbi/: usb_gadget.lua
src/package/luci-app-usb_gadget/po/zh-cn/: usb_gadget.po
src/package/luci-app-usb_gadget/root/etc/init.d/: usb_gadget
src/package/luci-app-usb_gadget/root/etc/uci-defaults/: luci-app-usb_gadget
src/package/luci-app-usb_otg/: Makefile
src/package/luci-app-usb_otg/luasrc/controller/: usb_otg.lua
src/package/luci-app-usb_otg/luasrc/model/cbi/: usb_otg.lua
src/package/luci-app-usb_otg/po/zh-cn/: usb_otg.po
src/package/luci-app-usb_otg/root/etc/config/: usb_otg
src/package/luci-app-usb_otg/root/etc/init.d/: usb_otg
src/package/luci-app-usb_otg/root/etc/uci-defaults/: luci-app-usb_otg
src/panel/: Makefile  OLEDApp.cpp  OLEDApp.h  OLEDConfig.h  OLEDIconData.cpp  OLEDMainPageView.cpp  OLEDMainPageView.h  OLEDPageView.cpp  OLEDPageView.h  OLEDView.cpp  OLEDView.h  main.cpp
(+51 files in other folders)
