
noinst_PROGRAMS =

LBK_HEADERS_ADDONS =			\
	add-ons/LBPanelBuffer.h		\
	add-ons/LBPanelDeviceAddOn.h	\
	add-ons/LBPanelDevice.h		\
	add-ons/LBPanelKeypadGeneric.h	\
	add-ons/LBPanelTouchpad.h	\
	add-ons/LBPanelScreen.h		\
	add-ons/LBPanelScreenNet.h	\
	add-ons/LBPanelCombiner.h

LBK_HEADERS_MAIN =		\
	LBKConfig.h		\
	LBKit.h			\
	LBAppDefs.h		\
	LBIconDefs.h		\
	LBAlertView.h		\
	LBApplication.h		\
	LBAppSettings.h		\
	LBView.h		\
	LBScopeItem.h		\
	LBScopeHandler.h	\
	LBListItem.h		\
	LBListView.h		\
	LBMenuItem.h		\
	LBMenuView.h		\
	LBPageView.h

EXTRA_DIST = $(LBK_HEADERS_MAIN) $(LBK_HEADERS_ADDONS)

DISTCLEANFILES = Makefile.in

